--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
             <p>Скачайте последнюю версию лаунчера для доступа к игре</p>
         </div>
         
-        <a href="Nonerai pack 1.3+hitboxes.zip" class="btn download-btn" download>
+        <a href="download.html" class="btn download-btn">
             <i>⬇️</i> Скачать лаунчер
         </a>
         
