--- a/index.html
+++ b/index.html
@@ -314,10 +314,10 @@
         </div>
         
         <div class="social-links">
-            <a href="https://t.me/your_telegram_channel" target="_blank" class="btn telegram-btn">
+            <a href="https://t.me/nonerai" target="_blank" class="btn telegram-btn">
                 <i>📢</i> Telegram канал
             </a>
-            <a href="https://t.me/your_telegram_chat" target="_blank" class="btn telegram-btn">
+            <a href="https://t.me/nonerai_chat" target="_blank" class="btn telegram-btn">
                 <i>💬</i> Telegram чат
             </a>
         </div>
