--- a/index.html
+++ b/index.html
@@ -514,6 +514,7 @@
         <a href="download.html" class="btn download-btn" id="download">
             <i>⬇️</i> Скачать лаунчер
         </a>
+        <p style="margin-top: 10px; color: rgba(255, 255, 255, 0.7);">Выберите версию для загрузки</p>
         
         <h2 class="section-title">Что такое модификация?</h2>
         
