--- a/download.html
+++ b/download.html
@@ -211,6 +211,28 @@
                 margin-bottom: 20px;
             }
         }
+        
+        /* Button styles */
+        .btn {
+            display: inline-block;
+            padding: 12px 30px;
+            background: linear-gradient(45deg, #ff6b6b, #ff8e8e);
+            color: white;
+            border: none;
+            border-radius: 50px;
+            font-size: 1rem;
+            font-weight: 600;
+            text-decoration: none;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            margin: 10px 5px;
+        }
+        
+        .btn:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 5px 15px rgba(255, 107, 107, 0.3);
+        }
+        </style>
 </head>
 <body>
     <div class="container">
@@ -256,6 +278,7 @@
                     window.location.href = versionUrls[version];
                 });
             });
+        });
     </script>
 </body>
 </html>
