--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
         <a href="download.html" class="btn download-btn" id="download">
             <i>⬇️</i> Выбрать версию
         </a>
-        <p style="margin-top: 10px; color: rgba(255, 255, 255, 0.7);">Доступны обычная и NoDPI версии</p>
+        <p style="margin-top: 10px; color: rgba(255, 255, 255, 0.7);">Доступны обычная, NoDPI и HiSpace версии</p>
         
         <h2 class="section-title">Что такое модификация?</h2>
         
