--- a/download.html
+++ b/download.html
@@ -19,7 +19,7 @@
             margin: 0;
             padding: 0;
             min-height: 100vh;
-            background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)), url('фон/фон.jpg');
+            background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)), url('фон/фон.png');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
