--- a/index.html
+++ b/index.html
@@ -727,6 +727,13 @@
             <div class="carousel-dots" id="featureDots"></div>
         </div>
         
+        <div class="download-section" style="margin: 40px 0;">
+            <a href="download.html" class="btn download-btn" style="background: #ff6b6b; color: white; text-decoration: none; padding: 15px 30px; border-radius: 50px; font-weight: 600; font-size: 1.1em; transition: all 0.3s ease; box-shadow: 0 5px 15px rgba(255, 107, 107, 0.3);">
+                <i>⬇️</i> Выбрать версию
+            </a>
+            <p style="margin-top: 15px; color: rgba(255, 255, 255, 0.7); font-size: 0.9em;">Доступны обычная, NoDPI и HiSpace версии</p>
+        </div>
+        
         <div class="social-links" id="community">
             <a href="https://t.me/nonerai" target="_blank" class="btn telegram-btn">
                 <i>📢</i> Telegram канал
