--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
             margin: 0;
             padding: 0;
             min-height: 100vh;
-            background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('фон/фон.jpg');
+            background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('фон/фон.png');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
