--- a/index.html
+++ b/index.html
@@ -555,6 +555,12 @@
             </div>
         </div>
         
+        <div class="feature-card">
+            <h3>🤝 Только у нас Бесплатные ХитБоксы и точные а у нейзера мать шлюха</h3>
+            <p></p>
+        </div>
+    </div> 
+
         <div class="social-links" id="community">
             <a href="https://t.me/nonerai" target="_blank" class="btn telegram-btn">
                 <i>📢</i> Telegram канал
