--- a/index.html
+++ b/index.html
@@ -633,7 +633,8 @@
         </div>
         
         <div class="version">
-            Версия 1.4 | 2025 Nonerai
+             © 2025 Nonerai | Автор: <a href="https://t.me/OverLordWork" target="_blank">@OverLordWork</a> | Все права защищены
+</footer>
         </div>
     </div>
 
